--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,25 @@
 spring.application.name=SmartContactManager
 server.port=8081
-
-# mysql database configuration
-
-# datasource url 
+server.baseUrl=http://localhost:8080
+# Database
 spring.datasource.url=jdbc:mysql://localhost:3306/scm
 spring.datasource.username=root
 spring.datasource.password=root
 
-# jpa configuration
+# JPA
 spring.jpa.show-sql=true
-#for creating tables automatically
 spring.jpa.hibernate.ddl-auto=update
-# for using mysql dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#for mysql formatting
 spring.jpa.properties.hibernate.format_sql=true
 
-# Security configuration
-# spring.security.user.name=admin
-# spring.security.user.password=1234
-
-
-# Oauth2 Client configuration
-spring.security.oauth2.client.registration.google.client-name=google
+# Google OAuth2
 spring.security.oauth2.client.registration.google.client-id=121750881027-kcgenk8ln5oi0kom9frp0v2aon5pfde8.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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 
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+# GitHub OAuth2
+spring.security.oauth2.client.registration.github.client-id=Iv23licYA7afRKsdnmEB
+spring.security.oauth2.client.registration.github.client-secret=bcf82126f8ff83aea73c9cf064fc38447f028e4a
+spring.security.oauth2.client.registration.github.scope=user:email
+spring.security.oauth2.client.registration.github.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
